# terminal-zen

./: .gitignore  LICENSE  README.md  TAP_README_EXAMPLE.md  clean.sh  flake.nix  pyproject.toml  terminal-zen.rb
terminal_zen/: __init__.py  __main__.py
