[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal_zen"
version = "1.0.0"
description = "A terminal-based breathing and meditation guide with progress bars"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Bob Tianqi Wei", email = "bob@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
keywords = ["terminal", "breathing", "meditation", "cli", "wellness"]
dependencies = []

[project.scripts]
zen = "terminal_zen.__main__:main"

[project.urls]
Homepage = "https://github.com/bobtianqiwei/terminal_zen"
Repository = "https://github.com/bobtianqiwei/terminal_zen"
Issues = "https://github.com/bobtianqiwei/terminal_zen/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["terminal_zen*"]
